65) init.d fix screen bug in some scripts.<br>
66) Fix configure dns in vpn mode if uplink not send dns servers in pppd session.<br>
67) Tune miniupnpd defaults.<br>
68) Printserver p910nd use bidirection mode by default.<br>
69) More optimize for small/save memory builds.<br>
70) Update wireless tools to v30-rc7 (need for support UTF-8 SSID in console tools).<br>
71) Goahead fix proc gmac path for new chips.
72) Fix dhcp setup webui and small corrections defaults.<br>

<br>
<b>1.11.x</b><br>
1) Add check oversized packets in rx path.<br>
2) Small fix skb_alloc in raeth.<br>
3) Small fix packet padding in raeth.<br>
4) Rework raeth config procedure in driver.<br>
5) PPP fix multilink fragment MTU calculation and build fix.<br>
6) Use faster hash funcrtion instead jhash2 for arp subsystem.<br>
7) Fix "Fragment Reassembly Timeout" send (RFC792).<br>
8) Kernel nvram now work and set by default.<br>
9) Fix work some usb2serial converter and 3G modems (very low speed).<br>
10) Fix udppath need for correct l2tp kernel mode driver.<br>
11) Leave carrier on for empty bridge.<br>
12) Add nat loopback support for DMZ.<br>
13) Add UDPXYPort variable to change default udpxy port.<br>
14) Add libnet (need for cdp).<br>
15) Add Cisco Discovery deamon support (cdpEnabled variable. Need add in WebUI).<br>
16) Fix configure security mode for MBSSID.<br>
17) Update udpxy to PATCH120.<br>
18) Workaround for accept frames > 1514 bytes.<br>
19) Need drop done bit and touch LAN hardware at not allock new skb. Fix realloc.<br>
20) xl2tpd update to 1.3.1 version.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://wive-ng.sf.net">wive-ng.sf.net - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>