@@ -713,6 +713,7 @@
 18) Workaround for accept frames > 1514 bytes.<br>
 19) Need drop done bit and touch LAN hardware at not allock new skb. Fix realloc.<br>
 20) xl2tpd update to 1.3.1 version.<br>
+21) if kernel need backup nvram only first boot and "SaveAndReboot" menu click.<br>
 
 <br><br>
 <b>For support see:</b><br>
